--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -10915,3 +10915,10 @@ form img {
   width: 100px;
 }
 
+.color-pic {
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  border: 1px solid #ccc;
+}
+
