--- a/app/resources/sass/_color.scss
+++ b/app/resources/sass/_color.scss
@@ -1,3 +1,14 @@
 .color-pic{
 	width: 40px;height:40px;border-radius:100%;border:1px solid #ccc;
 }
+.modal .color-pic{
+	margin:auto;
+}
+.modal .checked-color{
+	background: #ccc;
+}
+.palette .color-pic{
+	width:100px;
+	height:100px;
+	margin:auto;
+}
