--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -1,11 +1,15 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
+@import "~font-awesome/css/font-awesome.css";
+
 // Variables
 @import 'variables';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+@import 'adminpage';
 
 //ADMIN FORMS
 @import 'adminforms';
