--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -13281,3 +13281,13 @@ form img {
   margin: auto;
 }
 
+.option-container label:hover {
+  background: #333;
+  color: #fff;
+}
+
+.option-container label.fillblack {
+  background: #333;
+  color: #fff;
+}
+
