--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -9,6 +9,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+//СТИЛИ ДЛЯ ЧЕКБОКСА
+@import 'checkbox';
+
 @import 'adminpage';
 
 //ADMIN FORMS
