--- a/app/resources/sass/_adminforms.scss
+++ b/app/resources/sass/_adminforms.scss
@@ -8,3 +8,12 @@ form img{
 .table img {
 	width: 100px;
 }
+
+.input-group-prepend{
+	width: 100%;
+}
+
+.input-group-text{
+	background:#fff;
+	border:0px;
+}
