--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -13320,6 +13320,23 @@ form img {
   border: 0px;
 }
 
+.cars_set .input-group-text {
+  background: transparent;
+}
+
+.car-set-bg {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.cars_set .car-set-bg:last-child {
+  border-bottom: 0px;
+}
+
+.cars_set .car-set-bg:nth-child(2n) {
+  background: #eee;
+}
+
 .color-pic {
   width: 40px;
   height: 40px;
