--- a/app/resources/sass/_variables.scss
+++ b/app/resources/sass/_variables.scss
@@ -1,10 +1,13 @@
 // Body
-$body-bg: #f8fafc;
+$body-bg: #fff;
 
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
+
+$font-big: 2rem;
+$font-medium: 1.2rem;
 
 // Colors
 $blue: #3490dc;
