--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -28,3 +28,9 @@
 
 @import '~slick-carousel/slick/slick.css';
 @import '~slick-carousel/slick/slick-theme.css';
+
+@import 'model_tabs';
+@import 'banners';
+@import 'header';
+@import 'model_header';
+@import 'model_info';
