--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -13788,7 +13788,11 @@ form img {
 
 .header-info .name,
 .header-info .phone {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
+}
+
+.nav-menu .navbar {
+  background: #fff;
 }
 
 .model-header {
