--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -36,3 +36,6 @@
 @import 'model_info';
 @import 'model_complect';
 @import 'properties';
+@import 'model_view';
+
+@import '../fonts/renault/font.css';
