--- a/app/resources/sass/_variables.scss
+++ b/app/resources/sass/_variables.scss
@@ -1,3 +1,5 @@
+
+
 // Body
 $body-bg: #fff;
 
@@ -20,4 +22,7 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+$rn_bold: Renault;
+$rn_light: Renault-regular;
 
