--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -37,5 +37,8 @@
 @import 'model_complect';
 @import 'properties';
 @import 'model_view';
+@import 'model_complect_list';
+@import 'cars_list';
+@import 'credit';
 
 @import '../fonts/renault/font.css';
