--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -13865,8 +13865,34 @@ body {
   font-size: 1.2rem;
 }
 
-.model-complect-control {
-  font-size: 1.2rem;
+.rn-bold {
+  font-family: Renault;
+}
+
+.wait-ajax {
+  font-size: 2rem;
+  -webkit-animation: wait-ajax 0.5s infinite ease-in-out;
+          animation: wait-ajax 0.5s infinite ease-in-out;
+}
+
+@-webkit-keyframes wait-ajax {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes wait-ajax {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .properties td {
@@ -13893,5 +13919,84 @@ body {
   border-radius: 10px;
   margin: 0 2px;
   cursor: pointer;
+}
+
+.model-complect-control {
+  cursor: pointer;
+  transition: background 0.1s linear;
+  font-size: 1.2rem;
+}
+
+.model-complect-control:hover {
+  color: #000;
+  background: #f5f5f5;
+}
+
+.fill-grey {
+  background: #f5f5f5;
+  border-bottom-color: #f5f5f5 !important;
+}
+
+.model-complect-code {
+  font-size: 0.9rem;
+  color: #555;
+}
+
+.model-complect-car-count {
+  font-size: 0.9rem;
+  background: #fc3;
+  color: #555;
+}
+
+.pack-line {
+  border-bottom: 1px dashed #ddd;
+}
+
+.pack-price {
+  font-size: 1.2rem;
+}
+
+.btn-renault {
+  background: #fc3;
+  border-color: #fc3;
+}
+
+.cars-list img {
+  width: 100%;
+}
+
+.cars-list .star {
+  font-size: 2rem;
+  display: inline-block;
+  padding-bottom: 20px;
+  border-radius: 100%;
+  width: 70px;
+  height: 70px;
+  transition: background 0.3s linear;
+  line-height: 70px;
+}
+
+.cars-list .star:hover {
+  background: #fc3;
+}
+
+.cars-list .star-block {
+  width: 100%;
+}
+
+.cars-list .car-price {
+  font-size: 1.2rem;
+}
+
+.credit-model {
+  font-size: 1.2rem;
+}
+
+.credit-name {
+  font-size: 2rem;
+}
+
+.credit-info {
+  font-size: 1.2rem;
 }
 
