--- a/app/resources/sass/_cars_list.scss
+++ b/app/resources/sass/_cars_list.scss
@@ -2,8 +2,8 @@
 	width: 100%;
 }
 
-.cars-list .star{
-	font-size: $font-big;
+ .star{
+	font-size: 3.5rem;
 	display: inline-block;
 	padding-bottom: 20px;
 	border-radius: 100%;
@@ -13,7 +13,7 @@
 	line-height: 70px;
 }
 
-.cars-list .star:hover{
+.star:hover{
 	background: $rn_yellow;
 }
 
@@ -23,4 +23,7 @@
 .cars-list .car-price{
 	font-size: $font-medium;
 }
-
+.cars-list a{
+	text-decoration: none;
+	color: inherit;
+}
