--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -40,5 +40,5 @@
 @import 'model_complect_list';
 @import 'cars_list';
 @import 'credit';
-
+@import 'company';
 @import '../fonts/renault/font.css';
