--- a/app/resources/sass/_company.scss
+++ b/app/resources/sass/_company.scss
@@ -1,5 +1,6 @@
 .company-block{
 	position:relative;
+	cursor:pointer;
 }
 .company-block:hover{
 	border-color: #fc3 !important;
@@ -22,4 +23,24 @@
 	bottom:0px;
 	left:0px;
 	width:100%;
+}
+.company-checkbox{
+	background:#fff;width:30px; height: 30px;position: absolute;right: 0px;bottom: 0px;display: flex; align-items:center;justify-content: center;
+}
+.company-block input{
+	display:none;
+}
+
+.company-disabled{
+	pointer-events: none;
+	color: #bbb !important;
+	border-color: #eee !important;
+}
+
+.border-bottom-dotted{
+	border-bottom: 1px dashed #ddd;
+}
+
+.fixed-calc{
+	position:fixed;top:55px;
 }
