--- a/app/resources/sass/_model_complect.scss
+++ b/app/resources/sass/_model_complect.scss
@@ -20,3 +20,12 @@ html {
 		transform: rotate(360deg);
 	}
 }
+
+.btn-grey{
+	background: #f5f5f5;
+	border: 1px solid #ccc;
+}
+
+.big-text{
+	font-size: $font-big;
+}
