--- a/app/resources/sass/_checkbox.scss
+++ b/app/resources/sass/_checkbox.scss
@@ -6,7 +6,7 @@
 }
 .checkbox__text {
 	position: relative;
-	padding: 0 0 0 60px;
+	padding: 3px 0 0 60px;
 	cursor: pointer;
 }
 .checkbox__text:before {
