--- a/app/resources/sass/_model_view.scss
+++ b/app/resources/sass/_model_view.scss
@@ -11,3 +11,12 @@
 	margin: 0 2px;
 	cursor: pointer;
 }
+
+.color-btn.active{
+	border: 3px solid #333;
+	transform: scale(0.5,0.5);
+}
+
+.lowercase{
+	text-transform:lowercase;
+}
