--- a/app/resources/sass/_adminforms.scss
+++ b/app/resources/sass/_adminforms.scss
@@ -9,11 +9,11 @@ form img{
 	width: 100px;
 }
 
-.input-group-prepend{
+.admin .input-group-prepend{
 	width: 100%;
 }
 
-.input-group-text{
+admin .input-group-text{
 	background:#fff;
 	border:0px;
 }
