--- a/app/resources/sass/_company.scss
+++ b/app/resources/sass/_company.scss
@@ -25,7 +25,7 @@
 	width:100%;
 }
 .company-checkbox{
-	background:#fff;width:30px; height: 30px;position: absolute;right: 0px;bottom: 0px;display: flex; align-items:center;justify-content: center;
+	color:#00e600;background:#fff;width:30px; height: 30px;position: absolute;right: 0px;bottom: 0px;display: flex; align-items:center;justify-content: center;
 }
 .company-block input{
 	display:none;
